--- a/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
+++ b/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
@@ -10,9 +10,10 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-  
-   <Canvas fx:id="tablero" height="320.0" width="800.0" />
+
+    <Canvas fx:id="tablero" height="320.0" width="800.0" />
 
     <Button onAction="#dibujarCable"  text="Agregar cable" />
-   <Button mnemonicParsing="false" onAction="#activaLed" text="Agregar Led" />
+    <Button mnemonicParsing="false" onAction="#activaLed" text="Agregar Led" />
+    <Button onAction="#AgregarSwitch"  text="Agregar switch" />
 </VBox>
