--- a/Proyecto-de-programacion-actualizacion-protoboard-feno/FernandoValdesH Proyecto-de-programacion main Proyecto-de-programacion-actualizacion-protoboard/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
+++ b/Proyecto-de-programacion-actualizacion-protoboard-feno/FernandoValdesH Proyecto-de-programacion main Proyecto-de-programacion-actualizacion-protoboard/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
@@ -6,23 +6,23 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="578.0" prefWidth="884.0" spacing="20.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyprotoboard.Controlador_Protoboard">
+<VBox alignment="CENTER" prefHeight="578.0" prefWidth="884.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.proyprotoboard.Controlador_Protoboard">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
     <Canvas fx:id="tablero" height="320.0" width="800.0" />
+    <HBox alignment="CENTER" prefHeight="0.0" prefWidth="844.0">
+        <children>
 
-   <HBox prefHeight="0.0" prefWidth="844.0">
-      <children>
-      
-                <Button fx:id="btnAgregarCable" onAction="#activarCable" text="Agregar cable" />
-          <Button fx:id="btnAgregarLed" mnemonicParsing="false" onAction="#activaLed" text="Agregar Led" />
-          <Button fx:id="btnAgregarSwitch" onAction="#AgregarSwitch" text="Agregar switch" />
-          <Button fx:id="btnAgregarOctoSwitch" mnemonicParsing="false" onAction="#agregarOctoSwitch" text="Agregar OctoSwitch" />
-          <Button fx:id="btnAgregarResistencia" onAction="#AgregarResistencia" text="Agregar resistencia" />
-         <Button fx:id="btnEliminarObj" mnemonicParsing="false" onAction="#activarEliminacion" text="Eliminar" />
-      </children>
-   </HBox>
+            <Button fx:id="btnAgregarCable" onAction="#activarCable" text="Agregar cable" />
+            <Button fx:id="btnAgregarLed" mnemonicParsing="false" onAction="#activaLed" text="Agregar Led" />
+            <Button fx:id="btnAgregarSwitch" onAction="#AgregarSwitch" text="Agregar switch" />
+            <Button fx:id="btnAgregarOctoSwitch" mnemonicParsing="false" onAction="#agregarOctoSwitch" text="Agregar OctoSwitch" />
+            <Button fx:id="btnAgregarResistencia" onAction="#AgregarResistencia" text="Agregar resistencia" />
+            <Button fx:id="btnAgregarChip" mnemonicParsing="false" onAction="#agregarChip" text="Agregar Chip" />
+            <Button fx:id="btnEliminarObj" mnemonicParsing="false" onAction="#activarEliminacion" text="Eliminar" />
 
+        </children>
+    </HBox>
 </VBox>
