--- a/Proyecto-de-programacion-actualizacion-protoboard-feno/FernandoValdesH Proyecto-de-programacion main Proyecto-de-programacion-actualizacion-protoboard/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
+++ b/Proyecto-de-programacion-actualizacion-protoboard-feno/FernandoValdesH Proyecto-de-programacion main Proyecto-de-programacion-actualizacion-protoboard/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
@@ -22,6 +22,7 @@
             <Button fx:id="btnAgregarResistencia" onAction="#AgregarResistencia" text="Agregar resistencia" />
             <Button fx:id="btnAgregarChip" mnemonicParsing="false" onAction="#agregarChip" text="Agregar Chip" />
             <Button fx:id="btnEliminarObj" mnemonicParsing="false" onAction="#activarEliminacion" text="Eliminar" />
+            <Button fx:id="btnAgregarDisplay" mnemonicParsing="false" onAction="#AgregarDisplay" text="Agregar Display" />
 
         </children>
     </HBox>
