--- a/Proyecto-de-programacion-actualizacion-protoboard-feno/FernandoValdesH Proyecto-de-programacion main Proyecto-de-programacion-actualizacion-protoboard/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
+++ b/Proyecto-de-programacion-actualizacion-protoboard-feno/FernandoValdesH Proyecto-de-programacion main Proyecto-de-programacion-actualizacion-protoboard/proy-protoboard/src/main/resources/com/example/proyprotoboard/Escena_Protoboard.fxml
@@ -23,7 +23,7 @@
             <Button fx:id="btnAgregarChip" mnemonicParsing="false" onAction="#agregarChip" text="Agregar Chip" />
             <Button fx:id="btnEliminarObj" mnemonicParsing="false" onAction="#activarEliminacion" text="Eliminar" />
             <Button fx:id="btnAgregarDisplay" mnemonicParsing="false" onAction="#AgregarDisplay" text="Agregar Display" />
-
+            <Button fx:id="btnResetearProtoboard" mnemonicParsing="false" onAction="#resetearProtoboard" text="Resetear Protoboard" />
         </children>
     </HBox>
 </VBox>
